              do not change the topology (e.g., Reidemeister moves).
        Class LockViolation:
            - New exception class used when the user attempts to change a
              locked simplex or facet.
        Class Matrix<T>:
            - Added destructive and non-destructive rank() functions.
            - New routines negateRow() and negateCol().
        Class Packet:
            - Renamed ChangeEventSpan to PacketChangeSpan, to make it clear
              that this only matters for objects held by packets.  The old
              name is kept as a deprecated alias.
            - New inner type alias PacketChangeGroup, to assist with readability
              when using a ChangeEventSpan for optimisation purposes only.
        Class PacketData<Held>:
            - Renamed ChangeEventSpan to PacketChangeSpan, to make it clear
              that this only matters for objects held by packets.  The old
              name is kept as a deprecated alias.
            - New inner type alias PacketChangeGroup, to assist with readability
              when using a ChangeEventSpan for optimisation purposes only.
            - The inner ChangeEventSpan class has a new member function held().
        Class Perm<n>:
            - New routine hash().
            - New class constant degree.
            - Added an alias Perm<6>::cachedOrder(), for consistency with the
              other permutation classes Perm<2..15>.
        Class Rational:
            - New function str().
        Class SatAnnulus:
            - Routine attachLST() now checks its preconditions, and throws
              an exception if they fail.
        Class Simplex<dim>:
            - New routines lock(), lockFacet(), unlock(), unlockFacet(),
              unlockAll(), isLocked(), isFacetLocked(), and lockMask().
        Class TightEncodable<T>:
            - Now provides a hash() function also, based on the tight encoding.
        Class TopologyLockable, TopologyLock: